added new changes to index

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h2>Hello world</h2>
     <a href="home.html">Home</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolore asperiores esse maiores aspernatur fugit amet odit veritatis suscipit minima.</p>
 </body>
 </html>
