ticket1 added one h3 tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h2>Hello world</h2>
+    <h3>muy chaNGES</h3>
     <a href="home.html">Home</a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis dolore asperiores esse maiores aspernatur fugit amet odit veritatis suscipit minima.</p>
 </body>
